Jwt has been Implemented along with ExecutorService has been introduced for concurrency in fetching API result